fixed vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+    margin: 0;
+  }
 body{
     background-color: #44bd32;
     display: flex;
@@ -19,7 +23,7 @@ font-family: 'Work Sans', sans-serif;
     background-color: #4cd137;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     border-radius: 10px;
-    width: max(700px,1450px);
+    width: max(650px,1450px);
 }
 
 h3{
